# vartools

./: AUTHORS  Makefile.am  Makefile.in  Makefile.in.bak  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  examplefiles.mk  libtool  unittest.sh
.github/workflows/: test-compile-vartools-ubuntu.yml
EXAMPLES/: 1  1.UTC  1.add  1.resample.example4  1.tmpout.fits  10  10.fits  11  11.highpassfftfilter  1_withID.txt  2  2.fftfilter  2.fits  2.resample.example1  2.resample.example2  2.testblend  2.twoharmsignal  3  3.cliptransit  3.macula  3.maculacurve  3.starspot  3.transit  3.transit.fits  4  4.fits  4.microlensinject  4.resample.example3  5  5.fits  6  6.fits  6479535620075955328_llc.fits  7  7.fits  8  8.fits  9  9.fits  M3.V006.lc  (+17 more)
EXAMPLES/OUTDIR1/: 1.aov  1.aov_harm  1.arimamodel  1.autocorr  1.bjdtdb  1.bls.model  1.bls.phcurve  1.cleanharm  1.hjdutc  1.medianhighpass  1.medianlowpass  1.phase.txt  1.test_tfa_sr_decorr  1.tfa.coeff  1.tfa.model  10.aov  10.aov_harm  10.arimamodel  10.autocorr  10.bls  10.bls.model  10.bls.phcurve  10.cleanharm  10.phase.txt  10.sysrem.model  2.aov  2.aov_harm  2.arimamodel  2.autocorr  2.bin.txt  2.bls.model  2.bls.phcurve  2.cleanharm  2.dftclean.dspec  2.gls  2.killharm.model  2.ls  2.mwwz  2.phase.txt  2.phasebin.txt  (+132 more)
USERFUNCS/: ReadME.USERFUNCS
USERFUNCS/src/: ChangeLog  Makefile  Makefile.am  Makefile.in  astrofuncs.c  astrofuncs.c~  astrofuncs.la  astrofuncs.lo  examplefunction.c  examplefunction.la  examplefunction.lo
USERFUNCS/src/.deps/: astrofuncs.Plo  examplefunction.Plo
USERFUNCS/src/.libs/: astrofuncs.la  astrofuncs.lai  astrofuncs.so.0  astrofuncs.so.0.0.0  astrofuncs.so.0.0.0T  examplefunction.la  examplefunction.lai  examplefunction.so.0.0.0  examplefunction.so.0.0.0T
USERLIBS/: ReadME.USERLIBS
USERLIBS/src/: ChangeLog  Makefile  Makefile.am  Makefile.in  fastchi2.c  fastchi2.h  fastchi2.la  fastchi2_la-fastchi2.lo  fastchi2_la-fastchi2_lib.lo  fastchi2_lib.c  fastchi2_lib.h  ftuneven.c  ftuneven.h  hatpiflag.c  hatpiflag.h  jktebop.c  jktebop.h  jktebop.la  jktebop.lo  jktebop_lib.f  jktebop_lib.h  jktebop_lib.lo  libjktebop.la  libmacula.la  macula.f90  macula.h  macula.la  macula.lo  macula_c.c  macula_c.lo  maculamod.mod  magadd.c  magadd.h  magadd.la  magadd.lo  medlc.c  medlc.h  medlc.la  medlc.lo  splinedetrend.c  (+7 more)
USERLIBS/src/.deps/: fastchi2_la-fastchi2.Plo  fastchi2_la-fastchi2_lib.Plo  jktebop.Plo  macula_c.Plo  magadd.Plo  medlc.Plo  transitbisec.Plo
USERLIBS/src/.libs/: fastchi2.la  fastchi2.lai  fastchi2.so.0  fastchi2.so.0.0.0  fastchi2.so.0.0.0T  jktebop.la  jktebop.lai  jktebop.so.0  jktebop.so.0.0.0  jktebop.so.0.0.0T  libjktebop.la  libmacula.la  macula.la  macula.lai  macula.so.0.0.0  macula.so.0.0.0T  magadd.la  magadd.lai  magadd.so.0.0.0  magadd.so.0.0.0T  medlc.la  medlc.lai  medlc.so.0.0.0  medlc.so.0.0.0T  transitbisec.la  transitbisec.lai  transitbisec.so.0.0.0  transitbisec.so.0.0.0T
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
libltdl/: Makefile  Makefile.in  Makefile.in.bak  dlopen.la  libltdlc.la  libltdlc_la-lt__alloc.lo  libltdlc_la-lt_dlloader.lo  libltdlc_la-lt_error.lo  libltdlc_la-ltdl.lo  libltdlc_la-slist.lo  lt__strl.lo
libltdl/.deps/: libltdlc_la-lt__alloc.Plo  libltdlc_la-lt_dlloader.Plo  libltdlc_la-lt_error.Plo  libltdlc_la-ltdl.Plo  libltdlc_la-slist.Plo  lt__strl.Plo
libltdl/loaders/: dlopen.lo  libltdlc_la-preopen.lo
libltdl/loaders/.deps/: dlopen.Plo  libltdlc_la-preopen.Plo
m4/: python_module.m4
src/: ChangeLog  GetBLSsignaltorednoise.c  Makefile  Makefile.am  Makefile.in  OutText.h  addnoise.c  alarm.c  amoeba.c  analytic.c  analytic.h  aov.c  aov_harm.c  autocorrelation.c  binarylcio.c  binarylcio.h  binlc.bak.c  binlc.c  binlc.develtmp.c  callrunR.c  callrunpython.c  chi2rms.c  commands.h  converttime.c  copylc.c  decorr.c  detrendtfa.c  dftclean.c  doublelinklist.c  doublelinklist.h  error.c  example.c  fft.c  findblends.c  fittrap.c  fluxtomag.c  functions.h  getampthresh.c  harmonicfilter.c  help.c  (+58 more)
