userfuncsdir = $(USERFUNCSDIR)
userfuncs_LTLIBRARIES = examplefunction.la astrofuncs.la
examplefunction_la_SOURCES = examplefunction.c
examplefunction_la_LIBADD = $(abs_top_srcdir)/src/libvartools.la
examplefunction_la_LDFLAGS = -module
astrofuncs_la_SOURCES = astrofuncs.c
astrofuncs_la_LIBADD = $(abs_top_srcdir)/src/libvartools.la
astrofuncs_la_LDFLAGS = -module

